styles/style.css
/* ... */
/* typography */
html {
  /* 62.5% of 16px browser font size is 10px */
  font-size: 62.5%;
  line-height: 1.15;
}

body {
  /* 16px */
  font-size: 1.6em;

  /* font-weight:         
    font-family: var(--ff-primary);
    min-height: 100vh;
    background-color: var(--color-main-bg);  */
}

img {
  max-width: 100%;
  display: block;
}

/* apply spacing for all paragraph text */
p {
  line-height: 1.7;
}

/* debug purpose only */

header,
footer,
article,
img {
  /* border: 1px solid red; */
}
/* ----------- ----------- ----------- ----------- ----------- ------------ */
/* --------------------------- specific styling --------------------------- */
/* ----------- ----------- ----------- ----------- ----------- ------------ */

/* ?? Utility classes for font, color to keep CSS DRY */

/* ----------- ----------- ----------- mobile first approach ----------- ----------- ----------- */

.grid-container {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
    "header-component"
    "screen-mockups-component"
    "stats-component"
    "grow-together-component"
    "conversations-component"
    "your-users-component"
    "build-community-component"
    "footer-component";
  gap: 10rem;

  width: 37.5rem; /* value as per style guide */
}

/* style 1st component - mobile */
.header-component {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
    "header-component__image-section"
    "header-component__info-section";
  gap: 10rem;
}

.header-component__image-section {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 2rem 1.2rem 0 1.2rem;
}

.header-component__image-section > img {
  width: 33%;
  height: 20px;
}

.header-component__image-section > button {
  width: 30%;

  font-family: var(--ff-body);
  font-weight: var(--fw-400);
  font-size: 1.3rem;

  background-color: white;

  border-radius: 3rem;
  border: 1px solid var(--clr-primary-pink);

  padding: 0.8rem 0;

  color: var(--clr-primary-pink);
  box-shadow: 0 0 4px var(--clr-primary-pink);
}

.header-component__info-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3.5rem;
}

.header-component__info-section > h1 {
  font-size: 2.5rem;
  font-family: var(--ff-headings);
  font-weight: var(--fw-700);

  line-height: 3.3rem;

  padding: 0 4rem;

  text-align: center;
}

.header-component__info-section > p {
  width: 85%;

  font-family: var(--ff-body);
  font-weight: var(--fw-400);
  font-size: 1.5rem;

  line-height: 2.4rem;

  text-align: center;
}

.header-component__info-section > button {
  border: none;
  border-radius: 3rem;

  background-color: var(--clr-primary-pink);
  color: white;

  padding: 1.6rem 3.6rem;

  font-family: var(--ff-body);
  font-weight: var(--fw-600);
  font-size: 1.4rem;

  box-shadow: 0px 5px 10px 0px var(--clr-primary-light-pink);
}

/* style 2nd component - mobile */
.screen-mockups-component {
  width: 90%;
  justify-self: center;
}

/* style 3rd component - mobile */
.stats-component {
  display: flex;
  flex-direction: column;
  gap: 6rem;
  align-items: center;
}

.stats-component__communities-count,
.stats-component__messages-count {
  display: flex;
  flex-direction: column;
  gap: 1.4rem;
}

.stats-component__communities-count > img,
.stats-component__messages-count > img {
  width: 18%;
}

.stats-component__communities-count > h2 {
  font-size: 6rem;
  font-family: var(--ff-headings);
  font-weight: var(--fw-600);
}

.stats-component__communities-count > p,
.stats-component__messages-count > p {
  font-size: 1.6rem;
  font-family: var(--ff-body);
  font-weight: var(--fw-400);
  text-align: center;
}

.stats-component__messages-count > h2 {
  font-size: 6rem;
  font-family: var(--ff-headings);
  font-weight: --fw-600;
}

/* style 4th component - mobile */
/* style 5th component - mobile */
/* style 6th component - mobile */
.grow-together-component__main,
.your-users-component__main {
  background-color: var(--clr-neutral-very-pale-blue);

  display: flex;
  flex-direction: column;
  gap: 8rem;
  align-items: center;

  padding: 8rem 0 6rem 0;
}

.conversations-component {
  display: flex;
  flex-direction: column;
  gap: 8rem;
  align-items: center;
}

.your-users-component__main {
  padding: 4rem 0 6rem 0;
}

.grow-together-component__main-info,
.your-users-component__main-info {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: center;
}

.conversations-component > section {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: center;
}

.grow-together-component__main-img,
.your-users-component__main-img {
  width: 80%;
}

.conversations-component > figure {
  width: 80%;
}

.grow-together-component__main > section > h2,
.your-users-component__main > section > h2,
.conversations-component > section > h2 {
  font-size: 2.5rem;
  font-family: var(--ff-headings);
  font-weight: var(--fw-700);
}

.grow-together-component__main > section > p,
.your-users-component__main > section > p,
.conversations-component > section > p {
  width: 92%;
  line-height: 1.45;
  text-align: center;

  font-family: var(--ff-body);
  font-weight: var(--fw-400);
  font-size: 1.5rem;
}

/* style 7th component - mobile */
.build-community-component {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5rem;
}

.build-community-component > h2 {
  font-size: 2.8rem;
  font-weight: bold;

  line-height: 1.4;

  text-align: center;
}

.build-community-component > button {
  border: none;
  border-radius: 3rem;

  padding: 1rem 2.8rem;

  background-color: var(--clr-primary-pink);
  color: white;

  font-family: var(--ff-body);
  font-weight: var(--fw-600);

  box-shadow: 0px 5px 10px 0px var(--clr-primary-light-pink);
}
/* ... */

